force-app/main/default/objects/Associated_Rate__c/Associated_Rate__c.object-meta.xml
<CustomObject>
    <label>Associated Rate</label>
    <nameField>
        <label>Associated Rates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Associated Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>