force-app/main/default/objects/Associated_Rate__c/fields/Currency_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Currency_Symbol__c</fullName>
    <formula>CASE(CurrencyIsoCode, 
&quot;EUR&quot;,&quot;€&quot;, 
&quot;DKK&quot;,&quot;kr&quot;, 
&quot;NOK&quot;,&quot;kr&quot;, 
&quot;GBP&quot;,&quot;£&quot;, 
&quot;GBP&quot;,&quot;£&quot;, 
&quot;GBP&quot;,&quot;£&quot;, 
&quot;SEK&quot;,&quot;kr&quot;, 
&quot;$&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency Symbol</label>
    <type>Text</type>
</CustomField>