force-app/main/default/objects/Associated_Rate__c/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <label>Default</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>