force-app/main/default/objects/Associated_Rate__c/fields/IsUsingDefault__c.field-meta.xml
<CustomField>
    <fullName>IsUsingDefault__c</fullName>
    <description>Looks at the Override rate which is the rate used versus the Default Rate to see if the Default rate is being used or not.</description>
    <formula>IF( Override__c = Default__c , TRUE, FALSE)</formula>
    <label>Is Using Default?</label>
    <type>Checkbox</type>
</CustomField>