force-app/main/default/objects/Associated_Rate__c/fields/LicenseSet__c.field-meta.xml
<CustomField>
    <fullName>LicenseSet__c</fullName>
    <label>LicenseSet</label>
    <referenceTo>LicenseSet__c</referenceTo>
    <relationshipName>Associated_Rates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>