force-app/main/default/objects/Associated_Rate__c/fields/Override__c.field-meta.xml
<CustomField>
    <fullName>Override__c</fullName>
    <label>Override</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>