force-app/main/default/objects/Associated_Rate__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate</label>
    <referenceTo>Rate__c</referenceTo>
    <relationshipLabel>Associated Rates</relationshipLabel>
    <relationshipName>Associated_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>