force-app/main/default/objects/Associated_Rate__c/fields/Rate_Name__c.field-meta.xml
<CustomField>
    <fullName>Rate_Name__c</fullName>
    <label>Rate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>