force-app/main/default/objects/Associated_Rate__c/fields/Required_Approval_Deal_Desk__c.field-meta.xml
<CustomField>
    <fullName>Required_Approval_Deal_Desk__c</fullName>
    <formula>Override__c &lt; SVP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required Approval: Deal Desk</label>
    <type>Checkbox</type>
</CustomField>