force-app/main/default/objects/Associated_Rate__c/fields/Required_Approval_RVP__c.field-meta.xml
<CustomField>
    <fullName>Required_Approval_RVP__c</fullName>
    <formula>Override__c &lt; Sales_Rep__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required Approval: RVP</label>
    <type>Checkbox</type>
</CustomField>