force-app/main/default/objects/Associated_Rate__c/fields/Required_Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>Required_Approval_Type__c</fullName>
    <formula>IF(
  Required_Approval_Deal_Desk__c,
  &quot;Deal Desk&quot;,
  IF(
    Required_Approval_SVP__c,
    &quot;SVP&quot;,
    IF(
      Required_Approval_RVP__c,
      &quot;RVP&quot;,
      &quot;None&quot;
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required Approval Type</label>
    <type>Text</type>
</CustomField>