force-app/main/default/objects/Associated_Rate__c/fields/RVP__c.field-meta.xml
<CustomField>
    <fullName>RVP__c</fullName>
    <label>RVP</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>