force-app/main/default/objects/Associated_Rate__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <label>Sales Rep</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>