force-app/main/default/objects/Associated_Rate__c/fields/Show_on_Quote__c.field-meta.xml
<CustomField>
    <fullName>Show_on_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this Rate should appear on the Quote. It will always appear on the Agreement.</description>
    <inlineHelpText>Whether this Rate should appear on the Quote. It will always appear on the Agreement.</inlineHelpText>
    <label>Show on Quote</label>
    <type>Checkbox</type>
</CustomField>