force-app/main/default/objects/Associated_Rate__c/fields/SVP__c.field-meta.xml
<CustomField>
    <fullName>SVP__c</fullName>
    <label>SVP</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>