force-app/main/default/objects/Associated_Rate__c/fields/Tier_Bundling__c.field-meta.xml
<CustomField>
    <fullName>Tier_Bundling__c</fullName>
    <label>Tier Bundling</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>