force-app/main/default/objects/Associated_Rate__c/listViews/All_Associated_Rates.listView-meta.xml
<ListView>
    <fullName>All_Associated_Rates</fullName>
    <columns>NAME</columns>
    <columns>IsUsingDefault__c</columns>
    <columns>Override__c</columns>
    <columns>Default__c</columns>
    <columns>LicenseSet__c</columns>
    <columns>Rate__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Associated Rates</label>
    <language>en_US</language>
</ListView>